Fixed JunitCustomParallelStrategy